<resources>
    <string name="app_name">MorTeam</string>

    <!-- Login Activity -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Log In</string>
    <string name="login_separator">  - OR - </string>
    <string name="login_registerButton">Register</string>

    <!-- Register -->
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_passwordConfirm">Confirm Password</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Phone</string>
    <string name="register_registerButton">Register</string>

    <!-- Join Team -->
    <string name="joinTeam_teamIdBox">Team ID</string>
    <string name="joinTeam_joinButton">Join Team</string>

    <!-- Main Tab Activity -->
    <string name="title_frag1">Home</string>
    <string name="title_frag2">Chat</string>
    <string name="title_frag3">Drive</string>
    <string name="title_frag4">Calendar</string>
    <string name="title_frag5">Settings</string>
    <string name="title_frag6">Sign Out</string>

    <!-- Announcements -->
    <string name="newAnnouncement_audience">Audience:\t</string>
    <string name="newAnnouncement_message">Type a message...</string>

    <!-- Drive -->
    <string name="newFolder_message">Folder name</string>

    <!-- Subdivision Activity -->
    <string name="subdivision_userTitle">Users</string>

    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_yourSubdivisions">Your Subdivisions</string>
    <string name="navigation_drawer_publicSubdivisions">Public Subdivisions</string>
    <string name="navigation_drawer_team">Team</string>

    <!-- Chat Activity -->
    <string name="chat_messageBox">Message</string>
    <string name="chat_button">Send</string>

    <!-- Profile Activity -->
    <string name="profile_editProfile">Edit Profile</string>
    <string name="profile_changePassword">Change Password</string>
    <string name="profile_attendance">Attendance</string>
    <string name="profile_unexcused">Unexcused Absences:\t</string>
    <string name="profile_presencePercentage">Presence Percentage:\t</string>
    <string name="profile_unexcusedDates">Dates of Unexcused Absences:\t</string>
    <string name="profile_pendingTasks">Pending Tasks</string>
    <string name="profile_completedTasks">Completed Tasks</string>
    <string name="profile_assignTaskButton">Assign Task</string>
    <string name="profile_noTasks">\tNone</string>

    <!-- Change Password -->
    <string name="changePassword_old">Old Password</string>
    <string name="changePassword_new">New Password</string>
    <string name="changePassword_confirm">Confirm New Password</string>

    <!-- Edit Profile -->
    <string name="editProfile_firstName">First Name</string>
    <string name="editProfile_lastName">Last Name</string>
    <string name="editProfile_email">Email</string>
    <string name="editProfile_parentEmail">Parent Email</string>
    <string name="editProfile_phone">Phone</string>

    <!-- Tasks -->
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AISHDFa87yd8ysaiu-dhy78faweUIOFf</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
