<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_theme">

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/register_firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textCapWords"
            android:hint="@string/register_firstName" />

        <EditText
            android:id="@+id/register_lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textCapWords"
            android:hint="@string/register_lastName" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textNoSuggestions"
            android:hint="@string/login_username" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/login_password" />

        <EditText
            android:id="@+id/register_passwordConfirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/register_passwordConfirm" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="phone"
            android:hint="@string/register_phone" />

        <Button
            android:id="@+id/register_registerButton"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:onClick="register"
            android:text="@string/register_registerButton" />

    </LinearLayout>

</RelativeLayout>