<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical"
    android:gravity="center">

        <EditText
            android:id="@+id/editProfile_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editProfile_firstName" />

        <EditText
            android:id="@+id/editProfile_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editProfile_lastName" />

        <EditText
            android:id="@+id/editProfile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/editProfile_email" />

        <EditText
            android:id="@+id/editProfile_parentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/editProfile_parentEmail" />

        <EditText
            android:id="@+id/editProfile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/editProfile_phone" />

</LinearLayout>