<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_theme" >

        <Button
            android:id="@+id/login_registerbutton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_gravity="top|start"
            android:text="@string/login_registerButton"
            android:onClick="register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:inputType="textNoSuggestions"
            android:hint="@string/login_username"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/login_password" />

        <CheckBox
            android:id="@+id/login_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="Remember Me?"/>

        <Button
            android:id="@+id/login_loginButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:onClick="login"
            android:text="@string/login_loginButton" />

    </LinearLayout>

</RelativeLayout>